--- a/New_FMRedioPlayer/app/src/main/res/values/strings.xml
+++ b/New_FMRedioPlayer/app/src/main/res/values/strings.xml
@@ -10,4 +10,7 @@
     <string name="play_mode_random_text">随机播放</string>
     <string name="play_mode_list_play_text">列表循环</string>
     <string name="play_mode_single_play_text">单曲循环</string>
+
+    <string name="play_order_text_order">顺序</string>
+    <string name="play_order_text_up">逆序</string>
 </resources>
