--- a/New_FMRedioPlayer/app/src/main/res/values/strings.xml
+++ b/New_FMRedioPlayer/app/src/main/res/values/strings.xml
@@ -13,4 +13,6 @@
 
     <string name="play_order_text_order">顺序</string>
     <string name="play_order_text_up">逆序</string>
+    <string name="cancel_sub_tips_text">取消订阅</string>
+    <string name="sun_tips_text"> + 订阅</string>
 </resources>
