--- a/New_FMRedioPlayer/app/src/main/res/values/strings.xml
+++ b/New_FMRedioPlayer/app/src/main/res/values/strings.xml
@@ -15,4 +15,7 @@
     <string name="play_order_text_up">逆序</string>
     <string name="cancel_sub_tips_text">取消订阅</string>
     <string name="sun_tips_text"> + 订阅</string>
+
+    <string name="no_sub_content_tips_text">订阅内容为空...</string>
+    <string name="search_no_content_tip_text">没有相关内容 ...</string>
 </resources>
